Configure project to use django-pipeline
At this point, django-pipeline has been added to the project and appears to be
working correctly.

--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -1,14 +1,16 @@
 {% load static %}
+{% load pipeline %}
 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'app1/app1.css'%}">
   <title>App1</title>
+  {% stylesheet 'basecss' %}
 </head>
-<body>
+<body class='app1'>
   <h1>App1</h1>
   <p>This is app1</p>
 </body>
+{% javascript 'basejs' %}
 </html>
