--- a/app1/static/app1/app1.css
+++ b/app1/static/app1/app1.css
@@ -1,4 +1,28 @@
-body.app1 {
-  background: black;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.el {
+  background-color: green;
+}
+
+body {
+  background: blue;
   color: white;
+}
+
+.main {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.main .main__paragraph {
+  font-weight: 500;
+}
+
+.main:hover {
+  color: pink;
 }
