Move global Sass partial files to new 'static' base directory
Created new BASE_DIR/static/css directory and moved Sass partials from app1's
static directory to it.  Changed import path in main app1 Sass file.

--- a/app1/static/app1/app1.scss
+++ b/app1/static/app1/app1.scss
@@ -1,5 +1,5 @@
-@import './resets';
-@import './variables';
+@import '../../../static/css/resets';
+@import '../../../static/css/variables';
 
 // Example: Interpolation
 // See t.ly/QMEc
