--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -1,4 +1,5 @@
-$primary-color: blue;
+$primary-color: black;
+$secondary-color: #666666;
 $text-color: white;
 // This is a Sass "map".   It's like a Python dictionary.
 $font-weights: (
