--- a/app2/static/app2/app2.css
+++ b/app2/static/app2/app2.css
@@ -1,4 +1,11 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body.app2 {
-  background: green;
+  background: #666666;
   color: white;
 }
