--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -1,9 +1,14 @@
 $primary-color: black;
+
 $secondary-color: #666666;
+
 $text-color: white;
+
 // This is a Sass "map".   It's like a Python dictionary.
 $font-weights: (
     "regular": 400,
     "medium": 500,
     "bold": 700
 );
+
+$mobile: 800px;
