Add style inheritance

--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -2,6 +2,8 @@ $primary-color: black;
 
 $secondary-color: #666666;
 
+$accent-color: orange;
+
 $text-color: white;
 
 // This is a Sass "map".   It's like a Python dictionary.
