--- a/app1/static/app1/app1.css
+++ b/app1/static/app1/app1.css
@@ -32,12 +32,16 @@ body {
   margin: 0 auto;
 }
 
-.main .main__paragraph {
-  font-weight: 400;
+.main .main__paragraph1, .main .main__paragraph2 {
+  font-weight: 700;
 }
 
-.main:hover {
+.main .main__paragraph1:hover, .main .main__paragraph2:hover {
   color: pink;
+}
+
+.main .main__paragraph2:hover {
+  color: orange;
 }
 
 @media (max-width: 800px) {
