--- a/app1/static/app1/app1.scss
+++ b/app1/static/app1/app1.scss
@@ -38,13 +38,23 @@ body {
     // Use & instead of repeating ".main".  "&" = the parent.
     // Use interpolation too so you get ".main .main__paragraph" instead of just ".main__paragraph".
     //.main__paragraph {
-    #{&}__paragraph {
-        font-weight: weight(regular);
+    #{&}__paragraph1 {
+        font-weight: weight(bold);
+
+        &:hover {
+            color: pink;
+        }
     }
 
-    &:hover {
-        color: pink;
+    // Inherit styles from paragraph1 but make a few minor changes
+    #{&}__paragraph2 {
+        @extend .main__paragraph1;
+
+        &:hover {
+            color: $accent-color;
+        }
     }
+
 
     // This substitutes for a media query.
     @include mobile {
