--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -10,9 +10,9 @@
 </head>
 <body class="dark">
   <div class="main">
-    <p class="main__paragraph">Anim ipsum amet culpa minim eu ipsum tempor id excepteur ad ut excepteur laborum exercitation. Dolore adipisicing dolor nisi amet anim duis. Commodo pariatur aute cupidatat consectetur sit eu minim dolor. Nostrud do ea pariatur laboris elit aliquip eiusmod ipsum sint.</p>
+    <p class="main__paragraph1">Anim ipsum amet culpa minim eu ipsum tempor id excepteur ad ut excepteur laborum exercitation. Dolore adipisicing dolor nisi amet anim duis. Commodo pariatur aute cupidatat consectetur sit eu minim dolor. Nostrud do ea pariatur laboris elit aliquip eiusmod ipsum sint.</p>
 
-    <p class="main__paragraph">Anim ipsum amet culpa minim eu ipsum tempor id excepteur ad ut excepteur laborum exercitation. Dolore adipisicing dolor nisi amet anim duis. Commodo pariatur aute cupidatat consectetur sit eu minim dolor. Nostrud do ea pariatur laboris elit aliquip eiusmod ipsum sint.</p>
+    <p class="main__paragraph2">Anim ipsum amet culpa minim eu ipsum tempor id excepteur ad ut excepteur laborum exercitation. Dolore adipisicing dolor nisi amet anim duis. Commodo pariatur aute cupidatat consectetur sit eu minim dolor. Nostrud do ea pariatur laboris elit aliquip eiusmod ipsum sint.</p>
 
     <!-- Demonstrate Sass interpolation -->
     {% comment %} <p class="el">Et officia ex id laboris tempor deserunt enim deserunt aliquip do. Officia qui Lorem aliquip reprehenderit quis in sit nisi. Aliqua voluptate eiusmod ipsum nulla adipisicing velit minim ullamco sint id labore duis ut.</p> {% endcomment %}
